--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,9 @@ jobs:
         extended: true
 
     - name: Build
-      run: hugo --minify
+      run: |
+        rm -rf ./public
+        hugo --minify
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v2.5.0
